...
                    elevation = ButtonDefaults.buttonElevation(
                        defaultElevation = 6.dp,
                        pressedElevation = 4.dp
                    )
                ) {
                    Text(
                        text = "View Website/Info",
                        color = Color.White,
                        fontSize = 16.sp,
                        fontWeight =FontWeight.Medium
                    )
                }

...
                    colors = ButtonDefaults.buttonColors(containerColor = accentYellow),
                    elevation = ButtonDefaults.buttonElevation(
                        defaultElevation = 4.dp,
                        pressedElevation = 2.dp
                    )
                ) {
                        Text(text ="Rate Place",
                            color = NavyDark,
                            fontSize = 16.sp,
                            fontWeight = FontWeight.Medium
                        )
                }
            }
...
            Column(
                Modifier
                    .fillMaxWidth()
                    .padding(20.dp),
                horizontalAlignment = Alignment.CenterHorizontally
            ) {
                Text("Rate this Place", fontSize = 20.sp, color = navy)

                Spacer(Modifier.height(16.dp))


                // ✨ Star Rating
                Row {
...
                Spacer(Modifier.height(16.dp))

                //  Comment
                OutlinedTextField(
                    value = userComment,
                    onValueChange = { userComment = it },
                    label = { Text("Comment...") },
                    modifier = Modifier.fillMaxWidth()
                )
                Spacer(Modifier.height(20.dp))
                Row(modifier = Modifier.fillMaxWidth(), horizontalArrangement = Arrangement.spacedBy(8.dp)) {
                    // Submit
                    Button(
...
